# pgrs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CORE_REVIEW_SRP_SOC.md  Cargo.toml  README.md  build.rs  install.local.sh  install.sh
.claude/skills/code-review/: SKILL.md
.claude/skills/generate-commit/: SKILL.md
.github/workflows/: build.yml  ci.yml
modules/cli/: Cargo.toml
modules/cli/src/: app.rs  completions.rs  main.rs
modules/cli/src/cli/: args.rs  common_handler.rs  connection_handler.rs  mod.rs
modules/cli/src/repl/: args.rs  command_handler.rs  completer.rs  csv.rs  describe.rs  executor.rs  explain.rs  mod.rs  pager.rs  saved.rs  sql_utils.rs  ui.rs
modules/core/: Cargo.toml
modules/core/src/: lib.rs
modules/core/src/adapters/: mod.rs
modules/core/src/adapters/driven/: mod.rs  postgres_catalog.rs  postgres_db.rs
modules/core/src/adapters/driven/sqlite/: column_access_store.rs  connection_store.rs  migrations.rs  mod.rs  query_history_store.rs  saved_query_store.rs  schema_column_store.rs  schema_table_store.rs  table_access_store.rs
modules/core/src/api/: analytics.rs  completions.rs  connection.rs  mod.rs  query.rs  saved_query.rs  schema.rs
modules/core/src/domain/: catalog.rs  connection.rs  error.rs  explain.rs  mod.rs  query_history.rs  query_result.rs  saved_query.rs  schema_column.rs  schema_table.rs
modules/core/src/enums/: mod.rs  tls_mode.rs
modules/core/src/ports/: catalog_port.rs  column_access_repository.rs  connection_repository.rs  db_connection.rs  db_connector.rs  mod.rs  query_history_repository.rs  repl_port.rs  saved_query_repository.rs  schema_column_repository.rs  schema_port.rs  schema_table_repository.rs  table_access_repository.rs
modules/core/src/query/: alias.rs  classify.rs  mod.rs  transaction.rs
modules/core/src/services/: catalog.rs  mod.rs
modules/core/src/services/analytics/: service.rs
modules/core/src/services/column_access/: service.rs
modules/core/src/services/connection/: service.rs
modules/core/src/services/query/: command_completion.rs  completion_ranker.rs  completions.rs  mod.rs  query_completion.rs
modules/core/src/services/query_history/: service.rs
modules/core/src/services/saved_query/: service.rs
modules/core/src/services/schema/: service.rs
modules/core/src/services/schema_cache/: service.rs
modules/core/src/services/schema_column/: service.rs
modules/core/src/services/schema_table/: service.rs
modules/core/src/services/table_access/: service.rs
src/: app.rs  main.rs  test_comma_check.rs
src/core/: mod.rs
(+119 files in other folders)
