[package]
name = "pgrs"
version = "0.4.0"
edition = "2024"

[dependencies]
dirs = "6"
postgres = "0.19"
reedline = "0.47"
nu-ansi-term = "0.50"
unicode-width = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
postgres-native-tls = "0.5.3"
native-tls = { version = "0.2.18", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"
