[package]
name = "pgrs"
version = "0.6.0"
edition = "2024"

[dependencies]
dirs = "6"
postgres = "0.19"
reedline = "0.47"
nu-ansi-term = "0.50"
unicode-width = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
postgres-native-tls = "0.5.3"
native-tls = { version = "0.2.18", features = ["vendored"] }
chrono = { version = "0.4", features = ["clock"] }
sqlparser = "0.62"

[dev-dependencies]
tempfile = "3"
